syntax = "proto3";
package arkeo.arkeo;

import "gogoproto/gogo.proto";
import "arkeo/arkeo/params.proto";
import "arkeo/arkeo/keeper.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/arkeonetwork/arkeo/x/arkeo/types";

message ValidatorVersion {
  string validator_address = 1;
  int64 version = 2;
}

// GenesisState defines the arkeo module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated Provider providers = 2 [ (gogoproto.nullable) = false ];
  repeated Contract contracts = 3 [ (gogoproto.nullable) = false ];
  uint64 next_contract_id = 4;
  repeated ContractExpirationSet contract_expiration_sets = 5
      [ (gogoproto.nullable) = false ];
  repeated UserContractSet user_contract_sets = 6
      [ (gogoproto.nullable) = false ];
  int64 version = 7;
  repeated ValidatorVersion validator_versions = 8 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
